# casacore-mini

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml
.github/workflows/: pages.yml  quality-full.yml  quality.yml  reuse.yml
.obsidian/: workspace.json
cmake/: version_generated.hpp.in
data/corpus/: README.md
demos/: demo_aipsio_record.cpp  demo_check.hpp  demo_coordinate.cpp  demo_coordinate_remove_axes.cpp  demo_coordinate_world_map.cpp  demo_measure.cpp  demo_measure_m1950_2000.cpp  demo_ms_read.cpp  demo_ms_select.cpp  demo_ms_write.cpp  demo_table_read.cpp  demo_table_write.cpp  demo_unit.cpp
docs/: Doxyfile.in  casacore_audit.md  casacore_plan.md  module_inventory.csv  modules.dox
docs/demos/: api_gap_analysis.md
docs/handoffs/: ci_hotfix_2026-02-28.md
docs/phase0/: baselines.md  compat_contract_v0.md  corpus_manifest.yaml  exit_report.md
docs/phase1/: exit_report.md  plan.md
docs/phase10/: api_surface_map.csv  dependency_decisions.md  exit_report.md  interop_artifact_inventory.md  lel_coverage_contract.md  lint_profile.md  plan.md  tolerances.md
docs/phase11/: api_surface_map.csv  disposition_decisions.md  exit_report.md  interop_artifact_inventory.md  known_differences.md  lint_profile.md  missing_capabilities_audit.csv  msselection_capability_checklist.csv  plan.md  storage_manager_fidelity_audit.md  taql_command_checklist.csv  taql_msselection_full_support_plan.md  tolerances.md
docs/phase12/: deferred_on_demand_policy.md  exit_report.md  plan.md
docs/phase2/: exit_report.md  plan.md
docs/phase3/: exit_report.md  measure_coord_contract_v0.md  plan.md
docs/phase4/: exit_report.md  plan.md
docs/phase5/: exit_report.md  keyword_record_fidelity_v1.md  plan.md
docs/phase6/: exit_report.md  plan.md
docs/phase7/: deferred_managers.md  exit_report.md  plan.md  review_packet_template.md
docs/phase8/: api_surface_map.csv  dependency_decisions.md  exit_report.md  interop_artifact_inventory.md  known_differences.md  plan.md  reference_data_policy.md  review_packet_template.md  tolerances.md
docs/phase9/: api_surface_map.csv  exit_report.md  interop_artifact_inventory.md  known_differences.md  lint_profile.md  operations_coverage_contract.md  oracle_conformance_plan.md  oracle_format.md  plan.md  review_packet_template.md  selection_coverage_contract.md  tolerances.md
include/casacore_mini/: aipsio_reader.hpp  aipsio_record_reader.hpp  aipsio_record_writer.hpp  aipsio_writer.hpp  columns_index.hpp  concat_table.hpp  coordinate.hpp  coordinate_system.hpp  coordinate_util.hpp  direction_coordinate.hpp  erfa_bridge.hpp  fits_coordinate_util.hpp  gaussian_convert.hpp  image.hpp  image_region.hpp  incremental_stman.hpp  keyword_record.hpp  keyword_record_convert.hpp  lattice.hpp  lattice_array.hpp  lattice_expr.hpp  lattice_region.hpp  lattice_shape.hpp  linear_coordinate.hpp  linear_xform.hpp  mdspan_compat.hpp  measure_convert.hpp  measure_coord_metadata.hpp  measure_record.hpp  measure_types.hpp  measurement_set.hpp  ms_columns.hpp  ms_concat.hpp  ms_enums.hpp  ms_flagger.hpp  ms_iter.hpp  ms_metadata.hpp  ms_selection.hpp  ms_subtables.hpp  ms_summary.hpp  (+33 more)
src/: aipsio_fixture_gen.cpp  aipsio_reader.cpp  aipsio_record_reader.cpp  aipsio_record_writer.cpp  aipsio_writer.cpp  columns_index.cpp  concat_table.cpp  coordinate.cpp  coordinate_system.cpp  coordinate_util.cpp  direction_coordinate.cpp  erfa_bridge.cpp  fits_coordinate_util.cpp  gaussian_convert.cpp  image.cpp  image_region.cpp  incremental_stman.cpp  interop_mini_tool.cpp  keyword_record.cpp  keyword_record_convert.cpp  lattice.cpp  lattice_expr.cpp  lattice_region.cpp  lattice_shape.cpp  linear_coordinate.cpp  linear_xform.cpp  measure_convert.cpp  measure_coord_metadata.cpp  measure_record.cpp  measure_types.cpp  measurement_set.cpp  ms_columns.cpp  ms_concat.cpp  ms_enums.cpp  ms_flagger.cpp  ms_iter.cpp  ms_metadata.cpp  ms_selection.cpp  ms_subtables.cpp  ms_summary.cpp  (+32 more)
tests/: aipsio_reader_test.cpp  aipsio_record_reader_test.cpp  aipsio_record_writer_test.cpp  aipsio_writer_test.cpp  columns_index_test.cpp  concat_table_test.cpp  coordinate_malformed_test.cpp  coordinate_record_test.cpp  coordinate_system_test.cpp  coordinate_util_test.cpp  direction_coordinate_test.cpp  erfa_bridge_test.cpp  fits_coordinate_util_test.cpp  gaussian_convert_test.cpp  image_coverage_test.cpp  image_malformed_test.cpp  image_region_test.cpp  image_regrid_test.cpp  image_test.cpp  incremental_stman_test.cpp  keyword_record_convert_test.cpp  keyword_record_test.cpp  lattice_expr_test.cpp  lattice_region_test.cpp  lattice_shape_test.cpp  lattice_test.cpp  lel_malformed_test.cpp  lel_parser_test.cpp  linear_xform_test.cpp  mdspan_migration_test.cpp  measure_convert_full_test.cpp  measure_convert_test.cpp  measure_coord_metadata_test.cpp  measure_malformed_test.cpp  measure_record_test.cpp  measure_types_test.cpp  measurement_set_test.cpp  ms_columns_test.cpp  ms_concat_test.cpp  ms_flagger_test.cpp  (+64 more)
tools/: check_ci_build_lint_test_coverage.sh  check_ci_fast_build_test.sh  check_ci_fast_build_test_linux_container.sh  check_coverage.sh  check_docs.sh  check_format.sh  check_oracle.sh  check_phase0.sh  check_phase1.sh  check_phase10.sh  check_phase10_w1.sh  check_phase10_w10.sh  check_phase10_w11.sh  check_phase10_w12.sh  check_phase10_w2.sh  check_phase10_w3.sh  check_phase10_w4.sh  check_phase10_w5.sh  check_phase10_w6.sh  check_phase10_w7.sh  check_phase10_w8.sh  check_phase10_w9.sh  check_phase11.sh  check_phase11_w1.sh  check_phase11_w10.sh  check_phase11_w11.sh  check_phase11_w12.sh  check_phase11_w2.sh  check_phase11_w3.sh  check_phase11_w4.sh  check_phase11_w5.sh  check_phase11_w6.sh  check_phase11_w7.sh  check_phase11_w8.sh  check_phase11_w9.sh  check_phase12.sh  check_phase12_w1.sh  check_phase12_w10.sh  check_phase12_w11.sh  check_phase12_w12.sh  (+72 more)
tools/docker/: ci-fast.Dockerfile
tools/interop/: casacore_interop_tool.cpp  generate_oracle.sh  run_phase10_matrix.sh  run_phase11_matrix.sh  run_phase7_matrix.sh  run_phase8_matrix.sh  (+1 more)
(+437 files in other folders)
